# algo_trading_platform

./: .env.example  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
src/application/: __init__.py  backtesting.py  market_data.py  risk_control.py
src/domain/: models.py  strategy.py
src/infrastructure/: config.py  logging.py
src/infrastructure/data/: yfinance.py
src/infrastructure/persistence/: __init__.py  csv_writer.py  data_writer.py  db_writer.py  json_writer.py  parquet_writer.py
src/utils/: __init__.py  visualization.py
