[project]
name = "algo-trading-platform"
version = "0.1.0"
authors = [{name = "Stefan Mikic"}]
description = "Algorithmic trading platform to test out backtesting and various algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]
