[project]
name = "algo-trading-platform"
version = "0.1.0"
authors = [{name = "Stefan Mikic"}]
description = "Algorithmic trading platform to test out backtesting and various algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.38",
    "yfinance>=0.2.54",
]
